--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,370 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@article{pan2019generalizable,
+  title={Generalizable inter-institutional classification of abnormal chest radiographs using efficient convolutional neural networks},
+  author={Pan, Ian and Agarwal, Saurabh and Merck, Derek},
+  journal={Journal of digital imaging},
+  volume={32},
+  pages={888--896},
+  year={2019},
+  publisher={Springer International Publishing}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{halabi2019rsna,
+  title={The RSNA pediatric bone age machine learning challenge},
+  author={Halabi, Safwan S and Prevedello, Luciano M and Kalpathy-Cramer, Jayashree and Mamonov, Artem B and Bilbily, Alexander and Cicero, Mark and Pan, Ian and Pereira, Lucas Ara{\'u}jo and Sousa, Rafael Teixeira and Abdala, Nitamar and others},
+  journal={Radiology},
+  volume={290},
+  number={2},
+  pages={498--503},
+  year={2019},
+  publisher={Radiological Society of North America}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
+@article{pan2019tackling,
+  title={Tackling the radiological society of North America pneumonia detection challenge},
+  author={Pan, Ian and Cadrin-Ch{\^e}nevert, Alexandre and Cheng, Phillip M},
+  journal={American Journal of Roentgenology},
+  volume={213},
+  number={3},
+  pages={568--574},
+  year={2019},
+  publisher={American Roentgen Ray Society}
+}
+
+@article{pan2017machine,
+  title={Machine learning for social services: a study of prenatal case management in Illinois},
+  author={Pan, Ian and Nolan, Laura B and Brown, Rashida R and Khan, Romana and van der Boor, Paul and Harris, Daniel G and Ghani, Rayid},
+  journal={American journal of public health},
+  volume={107},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  pages={938--944},
+  year={2017},
+  publisher={American Public Health Association}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@article{pan2019improving,
+  title={Improving automated pediatric bone age estimation using ensembles of models from the 2017 RSNA machine learning challenge},
+  author={Pan, Ian and Thodberg, Hans Henrik and Halabi, Safwan S and Kalpathy-Cramer, Jayashree and Larson, David B},
+  journal={Radiology: Artificial Intelligence},
+  volume={1},
+  number={6},
+  pages={e190053},
+  year={2019},
+  publisher={Radiological Society of North America}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
+@article{yao2020deep,
+  title={Deep learning in neuroradiology: a systematic review of current algorithms and approaches for the new wave of imaging technology},
+  author={Yao, Anthony D and Cheng, Derrick L and Pan, Ian and Kitamura, Felipe},
+  journal={Radiology: Artificial Intelligence},
+  volume={2},
+  number={2},
+  pages={e190026},
+  year={2020},
+  publisher={Radiological Society of North America}
+}
+
+@article{bai2020performance,
+  title={Performance of radiologists in differentiating COVID-19 from non-COVID-19 viral pneumonia at chest CT},
+  author={Bai, Harrison X and Hsieh, Ben and Xiong, Zeng and Halsey, Kasey and Choi, Ji Whae and Tran, Thi My Linh and Pan, Ian and Shi, Lin-Bo and Wang, Dong-Cui and Mei, Ji and others},
+  journal={Radiology},
+  volume={296},
+  number={2},
+  pages={E46--E54},
+  year={2020},
+  publisher={Radiological Society of North America}
+}
+
+@article{bai2020artificial,
+  title={Artificial intelligence augmentation of radiologist performance in distinguishing COVID-19 from pneumonia of other origin at chest CT},
+  author={Bai, Harrison X and Wang, Robin and Xiong, Zeng and Hsieh, Ben and Chang, Ken and Halsey, Kasey and Tran, Thi My Linh and Choi, Ji Whae and Wang, Dong-Cui and Shi, Lin-Bo and others},
+  journal={Radiology},
+  volume={296},
+  number={3},
+  pages={E156--E165},
+  year={2020},
+  publisher={Radiological Society of North America}
+}
+
+@article{stib2020thyroid,
+  title={Thyroid nodule malignancy risk stratification using a convolutional neural network},
+  author={Stib, Matthew T and Pan, Ian and Merck, Derek and Middleton, William D and Beland, Michael D},
+  journal={Ultrasound Quarterly},
+  volume={36},
+  number={2},
+  pages={164--172},
+  year={2020},
+  publisher={LWW}
+}
+
+@article{takahashi2020regarding,
+  title={Regarding “serial quantitative chest CT assessment of COVID-19: deep-learning approach”},
+  author={Takahashi, Marcelo Straus and de Mendon{\c{c}}a, Matheus Ribeiro Furtado and Pan, Ian and Pinetti, Rogerio Zaia and Kitamura, Felipe C},
+  journal={Radiology: Cardiothoracic Imaging},
+  volume={2},
+  number={3},
+  year={2020},
+  publisher={Radiological Society of North America}
+}
+
+@article{kitamura2020reproducible,
+  title={Reproducible artificial intelligence research requires open communication of complete source code},
+  author={Kitamura, Felipe C and Pan, Ian and Kline, Timothy L},
+  journal={Radiology: Artificial Intelligence},
+  volume={2},
+  number={4},
+  pages={e200060},
+  year={2020},
+  publisher={Radiological Society of North America}
+}
+
+@article{pan2020rethinking,
+  title={Rethinking Greulich and Pyle: a deep learning approach to pediatric bone age assessment using pediatric trauma hand radiographs},
+  author={Pan, Ian and Baird, Grayson L and Mutasa, Simukayi and Merck, Derek and Ruzal-Shapiro, Carrie and Swenson, David W and Ayyala, Rama S},
+  journal={Radiology: Artificial intelligence},
+  volume={2},
+  number={4},
+  pages={e190198},
+  year={2020},
+  publisher={Radiological Society of North America}
+}
+
+@inproceedings{ng2017identification,
+  title={Identification of Novel Type 2 Diabetes Loci in African Americans: The MEDIA Consortium},
+  author={Ng, Maggie CY and Keaton, Jacob M and An, Ping and Bielak, Lawrence F and Cade, Brian and Chan, Kei Hang K and Chen, Guanjie and Chen, Wei Min and Fornage, Myriam and Guo, Xiuqing and others},
+  booktitle={DIABETES},
+  volume={66},
+  pages={A472--A473},
+  year={2017},
+  organization={AMER DIABETES ASSOC 1701 N BEAUREGARD ST, ALEXANDRIA, VA 22311-1717 USA}
+}
+
+@article{wang2021evaluation,
+  title={Evaluation of a convolutional neural network for ovarian tumor differentiation based on magnetic resonance imaging},
+  author={Wang, Robin and Cai, Yeyu and Lee, Iris K and Hu, Rong and Purkayastha, Subhanik and Pan, Ian and Yi, Thomas and Tran, Thi My Linh and Lu, Shaolei and Liu, Tao and others},
+  journal={European radiology},
+  volume={31},
+  pages={4960--4971},
+  year={2021},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@article{leary2021computer,
+  title={Computer-assisted measurement of traumatic brain hemorrhage volume is more predictive of functional outcome and mortality than standard abc/2 method: an analysis of computed tomography imaging data from the progesterone for traumatic brain injury experimental clinical treatment phase-iii trial},
+  author={Leary, Owen P and Merck, Lisa H and Yeatts, Sharon D and Pan, Ian and Liu, David D and Harder, Tyler J and Jung, Stefan and Collins, Scott and Braileanu, Maria and Gokaslan, Ziya L and others},
+  journal={Journal of Neurotrauma},
+  volume={38},
+  number={5},
+  pages={604--615},
+  year={2021},
+  publisher={Mary Ann Liebert, Inc., publishers 140 Huguenot Street, 3rd Floor New~…}
+}
+
+@article{he2020deep,
+  title={Deep learning-based classification of primary bone tumors on radiographs: A preliminary study},
+  author={He, Yu and Pan, Ian and Bao, Bingting and Halsey, Kasey and Chang, Marcello and Liu, Hui and Peng, Shuping and Sebro, Ronnie A and Guan, Jing and Yi, Thomas and others},
+  journal={EBioMedicine},
+  volume={62},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{pan2021deep,
+  title={Deep learning for pulmonary embolism detection: tackling the RSNA 2020 AI challenge},
+  author={Pan, Ian},
+  journal={Radiology: Artificial Intelligence},
+  volume={3},
+  number={5},
+  pages={e210068},
+  year={2021},
+  publisher={Radiological Society of North America}
+}
+
+@article{wang2022artificial,
+  title={Artificial intelligence for prediction of COVID-19 progression using CT imaging and clinical data},
+  author={Wang, Robin and Jiao, Zhicheng and Yang, Li and Choi, Ji Whae and Xiong, Zeng and Halsey, Kasey and Tran, Thi My Linh and Pan, Ian and Collins, Scott A and Feng, Xue and others},
+  journal={European radiology},
+  volume={32},
+  pages={205--212},
+  year={2022},
+  publisher={Springer Berlin Heidelberg}
+}
+
+@article{guo2021scu,
+  title={SCU-Net: A deep learning method for segmentation and quantification of breast arterial calcifications on mammograms},
+  author={Guo, Xiaoyuan and O'Neill, W Charles and Vey, Brianna and Yang, Tianen Christopher and Kim, Thomas J and Ghassemi, Maryzeh and Pan, Ian and Gichoya, Judy Wawira and Trivedi, Hari and Banerjee, Imon},
+  journal={Medical physics},
+  volume={48},
+  number={10},
+  pages={5851--5861},
+  year={2021}
+}
+
+@article{cheng2021deep,
+  title={Deep learning: an update for radiologists},
+  author={Cheng, Phillip M and Montagnon, Emmanuel and Yamashita, Rikiya and Pan, Ian and Cadrin-Ch{\^e}nevert, Alexandre and Perdig{\'o}n Romero, Francisco and Chartrand, Gabriel and Kadoury, Samuel and Tang, An},
+  journal={Radiographics},
+  volume={41},
+  number={5},
+  pages={1427--1445},
+  year={2021},
+  publisher={Radiological Society of North America}
+}
+
+@article{kitamura2021clinical,
+  title={Clinical artificial intelligence applications in radiology: Neuro},
+  author={Kitamura, Felipe Campos and Pan, Ian and Ferraciolli, Suely Fazio and Yeom, Kristen W and Abdala, Nitamar},
+  journal={Radiologic Clinics},
+  volume={59},
+  number={6},
+  pages={1003--1012},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{yi2021dicom,
+  title={DICOM image analysis and archive (DIANA): An open-source system for clinical AI applications},
+  author={Yi, Thomas and Pan, Ian and Collins, Scott and Chen, Fiona and Cueto, Robert and Hsieh, Ben and Hsieh, Celina and Smith, Jessica L and Yang, Li and Liao, Wei-hua and others},
+  journal={Journal of Digital Imaging},
+  volume={34},
+  pages={1405--1413},
+  year={2021},
+  publisher={Springer International Publishing}
+}
+
+@article{filice2022federated,
+  title={Federated deep learning to more reliably detect body part for hanging protocols, relevant priors, and workflow optimization},
+  author={Filice, Ross W and Stein, Anouk and Pan, Ian and Shih, George},
+  journal={Journal of Digital Imaging},
+  volume={35},
+  number={2},
+  pages={335--339},
+  year={2022},
+  publisher={Springer International Publishing Cham}
+}
+
+@article{kitamura2022artificial,
+  title={Artificial intelligence class activation mapping of bone age},
+  author={Kitamura, Felipe C and Pan, Ian},
+  journal={Radiology},
+  volume={303},
+  number={1},
+  pages={52--53},
+  year={2022},
+  publisher={Radiological Society of North America}
+}
+
+@article{mahajan2022multi,
+  title={Multi-ancestry genetic study of type 2 diabetes highlights the power of diverse populations for discovery and translation},
+  author={Mahajan, Anubha and Spracklen, Cassandra N and Zhang, Weihua and Ng, Maggie CY and Petty, Lauren E and Kitajima, Hidetoshi and Yu, Grace Z and R{\"u}eger, Sina and Speidel, Leo and Kim, Young Jin and others},
+  journal={Nature genetics},
+  volume={54},
+  number={5},
+  pages={560--572},
+  year={2022},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{paul2022systematic,
+  title={A systematic review of deep learning applications for optical coherence tomography in age-related macular degeneration},
+  author={Paul, Samantha K and Pan, Ian and Sobol, Warren M},
+  journal={Retina},
+  volume={42},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={1417--1424},
+  year={2022},
+  publisher={LWW}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{yu2023evaluating,
+  title={Evaluating progress in automatic chest x-ray radiology report generation},
+  author={Yu, Feiyang and Endo, Mark and Krishnan, Rayan and Pan, Ian and Tsai, Andy and Reis, Eduardo Pontes and Fonseca, Eduardo Kaiser Ururahy Nunes and Lee, Henrique Min Ho and Abad, Zahra Shakeri Hossein and Ng, Andrew Y and others},
+  journal={Patterns},
+  volume={4},
+  number={9},
+  year={2023},
+  publisher={Elsevier}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{meng2022end,
+  title={End-to-end artificial intelligence platform for the management of large vessel occlusions: A preliminary study},
+  author={Meng, Shujuan and Tran, Thi My Linh and Hu, Mingzhe and Wang, PanPan and Yi, Thomas and Zhong, Zhusi and Wang, Luoyun and Vogt, Braden and Jiao, Zhicheng and Barman, Arko and others},
+  journal={Journal of Stroke and Cerebrovascular Diseases},
+  volume={31},
+  number={11},
+  pages={106753},
+  year={2022},
+  publisher={WB Saunders}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
+@article{paul2022efficient,
+  title={Efficient labeling of retinal fundus photographs using deep active learning},
+  author={Paul, Samantha K and Pan, Ian and Sobol, Warren M},
+  journal={Journal of Medical Imaging},
+  volume={9},
   number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+  pages={064001--064001},
+  year={2022},
+  publisher={Society of Photo-Optical Instrumentation Engineers}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{ma2024deep,
+  title={Deep learning discrimination of rheumatoid arthritis from osteoarthritis on hand radiography},
+  author={Ma, Yuntong and Pan, Ian and Kim, Stanley Y and Wieschhoff, Ged G and Andriole, Katherine P and Mandell, Jacob C},
+  journal={Skeletal Radiology},
+  volume={53},
+  number={2},
+  pages={377--383},
+  year={2024},
+  publisher={Springer Berlin Heidelberg Berlin/Heidelberg}
+}
+
+@article{japan2023multi,
+  title={Multi-ancestry genome-wide study in> 2.5 million individuals reveals heterogeneity in mechanistic pathways of type 2 diabetes and complications},
+  author={Japan, AMED GRIFIN Diabetes Initiative and Suzuki, Ken and Hatzikotoulas, Konstantinos and Southam, Lorraine and Taylor, Henry J and Yin, Xianyong and Lorenz, Kim M and Mandla, Ravi and Huerta-Chagoya, Alicia and Rayner, Nigel W and others},
+  year={2023}
+}
+
+@article{pan2023artificial,
+  title={Artificial intelligence in neuroimaging of brain tumors: reality or still promise?},
+  author={Pan, Ian and Huang, Raymond Y},
+  journal={Current Opinion in Neurology},
+  volume={36},
+  number={6},
+  pages={549--556},
+  year={2023},
+  publisher={LWW}
+}
+
+@article{suzuki2024genetic,
+  title={Genetic drivers of heterogeneity in type 2 diabetes pathophysiology},
+  author={Suzuki, Ken and Hatzikotoulas, Konstantinos and Southam, Lorraine and Taylor, Henry J and Yin, Xianyong and Lorenz, Kim M and Mandla, Ravi and Huerta-Chagoya, Alicia and Melloni, Giorgio EM and Kanoni, Stavroula and others},
+  journal={Nature},
+  volume={627},
+  number={8003},
+  pages={347--357},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{wang2021evaluation,
+  title={Evaluation of a convolutional neural network for ovarian tumor differentiation based on magnetic resonance imaging (Oct, 10.1007/s00330-020-07266-x, 2020)},
+  author={Wang, Robin and Cai, Yeyu and Lee, Iris K and Hu, Rong and Purkayastha, Subhanik and Pan, Ian and Yi, Thomas and Tran, Thi My Linh and Lu, Shaolei and Liu, Tao and others},
+  journal={EUROPEAN RADIOLOGY},
+  volume={31},
+  number={11},
+  pages={8816--8816},
+  year={2021},
+  publisher={SPRINGER ONE NEW YORK PLAZA, SUITE 4600, NEW YORK, NY, UNITED STATES}
+}
+
+@article{hu2024assessing,
+  title={Assessing the Performance of Models from the 2022 RSNA Cervical Spine Fracture Detection Competition at a Level I Trauma Center},
+  author={Hu, Zixuan and Patel, Markand and Ball, Robyn L and Lin, Hui Ming and Prevedello, Luciano M and Naseri, Mitra and Mathur, Shobhit and Moreland, Robert and Wilson, Jefferson and Witiw, Christopher and others},
+  journal={Radiology: Artificial Intelligence},
+  pages={e230550},
+  year={2024},
+  publisher={Radiological Society of North America}
 }
